objects/advpm__ActionPlan__c.object
<CustomObject>
    <customHelpPage>advpm__HelpActionPlan</customHelpPage>
    <description>Action Plan instance.</description>
    <fields>
        <fullName>advpm__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Action Plans</relationshipLabel>
        <relationshipName>Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Action_Plan_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Plan Template</label>
        <referenceTo>advpm__ActionPlanTemplate__c</referenceTo>
        <relationshipName>R00NR0000000VbUtMAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Action_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Plan</label>
        <referenceTo>advpm__ActionPlan__c</referenceTo>
        <relationshipName>Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Completed__c</fullName>
        <description>The number of completed tasks of the Action Plan.</description>
        <inlineHelpText>The number of completed tasks of the Action Plan.</inlineHelpText>
        <label>Completed</label>
        <summaryFilterItems>
            <field>advpm__APTaskTemplate__c.advpm__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>advpm__APTaskTemplate__c.advpm__Action_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>advpm__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00NR0000000VZZ8MAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Description__c</fullName>
        <description>The description of the Action Plan.</description>
        <inlineHelpText>The description of the Action Plan.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>advpm__Matter_Legal_Hold__c</fullName>
        <formula>IF ( advpm__Matter__r.advpm__Legal_Hold__c , &quot;Yes&quot;, &quot;No&quot; )</formula>
        <label>Matter Legal Hold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Matter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Action Plans</relationshipLabel>
        <relationshipName>Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__SkipDay__c</fullName>
        <label>Skip Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__SkipWeekends__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Skip weekends when calculation activity start dates.</description>
        <label>Skip Weekends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The Start Date of the Action Plan</description>
        <inlineHelpText>The Start Date of the Action Plan</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__TaskRecordTypeID__c</fullName>
        <label>TaskRecordTypeID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Task_Status_Formula__c</fullName>
        <formula>TEXT(advpm__Completed__c ) &amp; &quot; of &quot; &amp;  text(advpm__Total__c) &amp; &quot; Completed&quot;</formula>
        <label>Overall Task Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Total__c</fullName>
        <description>The total number of tasks on the Action Plan.</description>
        <inlineHelpText>The total number of tasks on the Action Plan.</inlineHelpText>
        <label>Step Total</label>
        <summaryForeignKey>advpm__APTaskTemplate__c.advpm__Action_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>advpm__WhatId__c</fullName>
        <description>The Id of the Lookup Relationship.</description>
        <label>WhatId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Action Plan</label>
    <listViews>
        <fullName>advpm__All_Action_Plans</fullName>
        <columns>NAME</columns>
        <columns>advpm__Action_Plan_Template__c</columns>
        <columns>advpm__StartDate__c</columns>
        <columns>advpm__Account__c</columns>
        <columns>advpm__Contact__c</columns>
        <columns>advpm__Matter__c</columns>
        <columns>advpm__Action_Plan__c</columns>
        <columns>advpm__Completed__c</columns>
        <columns>advpm__Description__c</columns>
        <columns>advpm__Task_Status_Formula__c</columns>
        <columns>advpm__Total__c</columns>
        <columns>advpm__TaskRecordTypeID__c</columns>
        <columns>advpm__WhatId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Action Plans</label>
    </listViews>
    <nameField>
        <label>Action Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>advpm__Reference_Object_Can_not_be_null</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  
OR( advpm__Account__c == null,  advpm__Account__c == &apos;&apos; ),
OR( advpm__Contact__c == null,  advpm__Contact__c == &apos;&apos; ),
OR( advpm__Matter__c == null,  advpm__Matter__c == &apos;&apos; )
)</errorConditionFormula>
        <errorMessage>You must relate the Action Plan to an object (Account/Contact or Matter).  Select the type and the object, then save again.</errorMessage>
    </validationRules>
</CustomObject>